--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section>
+  <section class="top-banner">
     <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="special">Muntajim Rahman's</span> World</h1>
         <h3>Tech Enthusiasist | Code Geek | Front End Web Developer</h3>
         <p>Hello there. I'm Md. Muntajim Rahman Saimon, a 10th grade student at Rajuk Uttara Model College. I am learning web development now. I want to become  a web developer in my near future.</p>
+        <a  class="link-button" target ="_blank" href="https://linkedin.com/in/muntajim-rahman-saimon-1148421b2" >HIRE ME</a>
       </div>
       <div class="half-width">
             <img src="Saimon1.png" alt="">
       </div>
         
   </section>
+  
 </body>
 </html>
