--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
       </div>
         
   </section>
+
+  <br>
+
+  <section class="dream-big">
+    <div class="half-width">
+      <img src="Saimon2.png">
+    </div>
+    <div class="half-width">
+      <h2>Dream Big</h3>
+      <h3>Become a Web Developer</h3>
+      <p>I have learnt HTML5, CSS, Git page hosting, deploying. I am going to learn bottstrap, react UI, Javascript, angular framework in next fewe months as a part of becoming a MERN Stack web developer. My goal is to develop 12 websites after 6 months that includes an e-commerce website, institutional website etc.</p>
+      <a class="dream-big2" target ="_blank" href="https://github.com/Muntajim04">DOWNLOAD RESUME</a>
+
+    </div>
+
+  </section>
   
 </body>
 </html>
