--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="top-banner">
+  <section class="top-banner flexible-container">
     <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="special">Muntajim Rahman's</span> World</h1>
@@ -27,19 +27,33 @@
 
   <br>
 
-  <section class="dream-big">
+  <section class="dream-big flexible-container">
     <div class="half-width">
       <img src="Saimon2.png">
     </div>
     <div class="half-width">
       <h2>Dream Big</h3>
       <h3>Become a Web Developer</h3>
-      <p>I have learnt HTML5, CSS, Git page hosting, deploying. I am going to learn bottstrap, react UI, Javascript, angular framework in next fewe months as a part of becoming a MERN Stack web developer. My goal is to develop 12 websites after 6 months that includes an e-commerce website, institutional website etc.</p>
+      <p>I have learnt HTML5, CSS, Git page hosting, deploying. I am going to learn bottstrap, react UI, Javascript, angular framework in next few months as a part of becoming a MERN Stack web developer. My goal is to develop 12 websites after 6 months that includes an e-commerce website, institutional website etc.</p>
       <a class="dream-big2" target ="_blank" href="https://github.com/Muntajim04">DOWNLOAD RESUME</a>
-
     </div>
 
   </section>
-  
+  <section class="experience">
+    <h2>Experiences</h2>
+    <div class="flexible-container">
+      <div class="experience-item">
+        <h2>Senior Web Developer</h2>
+        <h3>2021-Present | Level : Intermediate</h3>
+        <p>I have already mastered HTML5, CSS3, Javascript, React UI, Angular Framework, Bootstrap, Native. I can clone several web pages with my web developing skills. At present, I am working as a Junior Web developr at Brainstorm inc. which is a USA Based comapny. It's basically a remote job </p>
+      </div>
+      <div id="web-developer" class="experience-item">
+        <h2>Junior Web Developer</h2>
+        <h3>2018-2020 | Level: Beginner</h3>
+        <p>At this primitive stage, I have learned those basic web building languages through a online course. Jhankar Mahabub was my mentor right back then. I have faced errors & solved them with the help of google & stack overflow. I have practiced day & night. Now, I'm confident enoghh that I can work for any company.</p>
+      </div>
+    </div>
+  </section>
+  <footer><p>&copy; Md. Muntajim Rahman Saimon, a Programming Hero Initiative</p></footer>
 </body>
 </html>
